Fix interline and alignment

--- a/resources/notes-base.css
+++ b/resources/notes-base.css
@@ -53,7 +53,7 @@ body {
     color: var(--color-text);
     font-family: var(--main-family);
     text-align: left;
-    line-height: 1.4;
+    line-height: 1.5;
     font-size: 0.95rem;
     border: 0px;
     padding: 3em;
